--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
-name = "python-minimal-boilerplate"
+name = "leuvengpx"
 version = "0.1.0"
-description = "A Python project containing some minimal best-practices boilerplate"
+description = "A Python project for generating maps from gpx"
 authors = ["Arthur Dent <arthur@dent.space>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "python_minimal_boilerplate"}]
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+folium = "^0.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
