--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 folium = "^0.14.0"
+altair = "5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
